--- a/personal_site_attempt/chemist.css
+++ b/personal_site_attempt/chemist.css
@@ -8,13 +8,28 @@ h1{
 }
 
 button{
-    
+    width: 150px;
+    height: 40px;
     display: flex;
     flex-direction: row;
 }
 
+#imgDiv{
+    display: flex;
+    justify-content: center;
+}
+
 img{
-    width: 600px;
+    width: 30%;
+}
+
+#buttonDiv{
+    display: flex;
+    justify-content: center;
+    
+}
+
+#next{
     display: flex;
     justify-content: center;
     align-items: center;
